--- a/src/package.xml
+++ b/src/package.xml
@@ -15,10 +15,13 @@
         <name>ApexPage</name>
     </types>
     <types>
+        <members>C501_Contact_Merge__c.Merge_Metric__c</members>
         <members>C501_Merge_Metric__c.Enabled_Programs__c</members>
+        <members>C501_Merge_Metric__c.Total_Unassigned_Contacts__c</members>
         <name>CustomField</name>
     </types>
     <types>
+        <members>C501_Contact_Merge__c</members>
         <members>C501_Merge_Metric__c</members>
         <name>CustomObject</name>
     </types>
